--- a/deploy/philo-news-values.yaml
+++ b/deploy/philo-news-values.yaml
@@ -10,6 +10,8 @@ env:
     value: /data/db.sqlite3
   - name: ALLOWED_HOSTS
     value: philo-news.nomaitech.com
+  - name: CSRF_TRUSTED_ORIGINS
+    value: https://philo-news.nomaitech.com
 
 persistence:
   enabled: true
